# pp2

./: .gitignore  CMakeLists.txt  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/actions/build-and-publish-docs/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: build-and-publish-docs.yml
_sources/source/: language.md.txt  language.rst.txt  machine.rst.txt
_sources/source/language/: control-flow.md.txt  functions.rst.txt  hello-world.md.txt  introduction.md.txt  literals.rst.txt  stdlib.rst.txt  variables.md.txt  variables.rst.txt
_sources/source/language/control-flow/: while.rst.txt
_sources/source/language/types/: bool.md.txt  fn.md.txt  type.md.txt
_static/css/: livecode.css
_static/scripts/: livecode-constants.js  livecode.js
_static/scripts/codemirror/: autorefresh.js  closebrackets.js
_static/scripts/codemirror/mode/: stylus.js
cmake/: FindSphinx.cmake  PP2Config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/_static/css/: livecode.css
docs/_static/scripts/: ansicolor.js  livecode-constants.js  livecode.js
docs/_static/scripts/codemirror/: matchbrackets.js
docs/_static/scripts/codemirror/mode/: perl.js
docs/ext/: livecode.py
docs/source/: language.rst  primitives.rst
docs/source/language/: hello-world.md  hello-world.rst  introduction.md  types.md  types.rst
docs/source/language/control-flow/: if.rst
docs/source/language/types/: any.md  bool.md  quote.md
include/pp2/: language.h  machine.h  pp2.h  primitive.h
include/pp2/language/: compiler.h
include/pp2/language/basic/: block.h  object.h  return.h  variable.h  variable_tables.h  variables.h
include/pp2/language/basic/detail/: variable_tables.h
include/pp2/language/definition/: basic.h  const.h  def.h  fn.h  primitive.h  type.h  vm_fn.h
include/pp2/language/expressions/: fn.h
include/pp2/language/io/: print.h  put.h
include/pp2/language/statements/: for.h  if.h  while.h
include/pp2/language/types/: any.h  bool.h  fn.h  int.h  quote.h  type.h
include/pp2/machine/: context.h  output.h  vm.h
include/pp2/machine/exception/: push_eh.h  throw.h
include/pp2/machine/goto/: goto.h  label.h
include/pp2/machine/insns/: emit.h  load.h  nop.h  terminate.h
include/pp2/machine/stack/: load.h  load_tables.h  pop.h  push.h  store.h  store_tables.h
include/pp2/machine/stack/detail/: load_tables.h  store_tables.h
include/pp2/primitive/: core.h
include/pp2/primitive/arithmetic/literal/: inc.h
include/pp2/primitive/assoc/: find.h
include/pp2/primitive/assoc/detail/: find_tables.h
include/pp2/primitive/basic/: cat.h  invoke.h
include/pp2/primitive/control/: if.h
include/pp2/primitive/introspection/: is_nestable.h  is_nil.h  is_tuple.h
include/pp2/primitive/punctuation/: comma.h  lparen.h  rparen.h
include/pp2/primitive/seq/: head.h  tail.h
include/pp2/primitive/tuple/: at.h  drop.h  eat.h  head.h  open.h  partition.h  prepend_last.h  replace.h
include/pp2/primitive/tuple/higher_order/: compute.h
single_include/: CMakeLists.txt  generate_single_include.py
single_include/pp2/: pp2.h
source/: language.html  machine.html  primitives.html
source/language/: builtin-types.html  control-flow.html  functions.html  hello-world.html  introduction.html  literals.html  stdlib.html  types.html  variables.html
source/language/control-flow/: for.html  if.html  while.html
source/language/literals/: bool.html
source/language/types/: any.html  bool.html  fn.html  quote.html  type.html
test/: CMakeLists.txt
test/tests/: conftest.py
test/tests/primitive/: test_core_primitives.py
